--- a/index.css
+++ b/index.css
@@ -141,6 +141,10 @@ h1 {
   background-color: #0b70ae;
 }
 
+#btn-flutuante3 {
+  right: 120px;
+  background-color: #ff5722;
+}
 /* Slide */
 .slider-container {
   position: relative;
